4243045_fr_FR_03_06/deny-projet2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: projet2
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: []
